--- a/src/homepage.html
+++ b/src/homepage.html
@@ -7,10 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    
 </head>
 <body>
-    <!-- <a href="template.html">Template</a> -->
     <div id="left-container">
         <h1>Mitsu</h1>
         <div>
@@ -18,10 +16,8 @@
             <a href="create_project.html"><span class="projects">Create Project</span></a>
         </div>
         <div><span>#</span><span class="project-title">Projects</span></div>
-        <div>
-            <div><span class="hashtag">#</span><span class="projects">All</span></div>
-            <div><span class="hashtag">#</span><span class="projects">Groceries</span></div>
-            <div><span class="hashtag">#</span><span class="projects">Fitness</span></div>
+        <div id="all-projects">
+            <div><span class="hashtag">#</span><span class="projects" data-project="ALL">All</span></div>
         </div>
     </div>
     <div id="right-container">
