--- a/src/homepage.html
+++ b/src/homepage.html
@@ -17,54 +17,12 @@
         </div>
         <div><span>#</span><span class="project-title">Projects</span></div>
         <div id="all-projects">
-            <div><span class="hashtag">#</span><span class="projects" data-project="ALL">All</span></div>
+            <div><span class="hashtag">#</span><span class="projects" data-project="All">All</span></div>
         </div>
     </div>
     <div id="right-container">
-        <p class="project-title"><b>All Tasks</b></p>
-        <ul>
-            <li> 
-                <div class="left-task">
-                    <div class="checkbox">
-                        <input type="checkbox" id="scales" name="scales" checked />
-                        <label for="scales">Do 30 min Yoga <span class="priority">Low Priority</span></label>
-                    </div>
-                    <div class="due">
-                        Due Tomorrow 5M
-                    </div>
-                </div>
-                <div class="right-task">
-                    # Fitness
-                </div>
-            </li>
-            <li> 
-                <div class="left-task">
-                    <div class="checkbox">
-                        <input type="checkbox" id="dentist" name="dentist" checked />
-                        <label for="dentist">Dentist appointment <span class="priority">High Priority</span></label>
-                    </div>
-                    <div class="due">
-                        Due Today 2PM
-                    </div>
-                </div>
-                <div class="right-task">
-                    # Appointments
-                </div>
-            </li>
-            <li> 
-                <div class="left-task">
-                    <div class="checkbox">
-                        <input type="checkbox" id="bread" name="bread" checked />
-                        <label for="bread">Buy Bread<span class="priority">Medium Priority</span></label>
-                    </div>
-                    <div class="due">
-                        Due Next Thursday 11PM
-                    </div>
-                </div>
-                <div class="right-task">
-                    # Groceries
-                </div>
-            </li>
+        <p class="project-title"><b id="right-container-project-name">All Tasks</b></p>
+        <ul id="task-container">
         </ul>
         <div id="add-task">
             <a href="add_task.html"><span>+ Add task</span></a>
