Refactor the index js file with print task fnc

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -24,9 +24,9 @@
         <p class="project-title"><b id="right-container-project-name">All Tasks</b></p>
         <ul id="task-container">
         </ul>
-        <div id="add-task">
-            <a href="add_task.html"><span>+ Add task</span></a>
-        </div>
+        <div id="add-task"><a href="add_task.html"><span>+ Add task</span></a> </div>
+        <div id="add-task"><span>- Remove all completed tasks</span></div>
+
     </div>
 </body>
 </html>
