--- a/src/view_task.html
+++ b/src/view_task.html
@@ -14,18 +14,17 @@
         <h1>Mitsu</h1>
     </div>
     <div id="main-body">
-        <div><span id="project-title">Task Name</span></div>
-        <div><span class="projects">Task Title</span></div>
-        <input type="text">
-        <div><span class="projects">Task Description</span></div>
-        <input type="text">
-        <div><span class="projects">Task dueDate</span></div>
-        <input type="text">
-        <div><span class="projects">Task Priority</span></div>
-        <input type="text">
-        <div><span class="projects">Project Name</span></div>
-        <input type="text">
-        <button>Create</button>
+        <div><span id="project-title">Task Title</span></div>
+        <div><span class="projects">Description</span></div>
+        <input type="text" disabled>
+        <div><span class="projects">dueDate</span></div>
+        <input type="text" disabled>
+        <div><span class="projects">Priority</span></div>
+        <input type="text" disabled>
+        <div><span class="projects">Project</span></div>
+        <input type="text" disabled>
+        <button>Edit task</button>
+        <button>Remove task</button>
     </div>
     </div>
 </body>
