View Task is functional

--- a/src/view_task.html
+++ b/src/view_task.html
@@ -14,15 +14,15 @@
         <h1>Mitsu</h1>
     </div>
     <div id="main-body">
-        <div><span id="project-title">Task Title</span></div>
-        <div><span class="projects">Description</span></div>
-        <input type="text" disabled>
-        <div><span class="projects">dueDate</span></div>
-        <input type="text" disabled>
-        <div><span class="projects">Priority</span></div>
-        <input type="text" disabled>
-        <div><span class="projects">Project</span></div>
-        <input type="text" disabled>
+        <div><span id="task-title">Task Title</span></div>
+        <label for = "description" class="projects">Description</label>
+        <input id="Description" name="Description" type="text" disabled value="">
+        <label for = "dueDate" class="projects">dueDate</label>
+        <input id="dueDate" name="dueDate" type="text" disabled value="">
+        <label for = "priority" class="projects">Priority</label>
+        <input id="priority" name="priority" type="text" disabled value="">
+        <label for = "project" class="projects">Project</label>
+        <input id="project" name="project" type="text" disabled value="">
         <button>Edit task</button>
         <button>Remove task</button>
     </div>
