Complete the first version

--- a/src/view_task.html
+++ b/src/view_task.html
@@ -23,8 +23,8 @@
         <input id="priority" name="priority" type="text" disabled value="">
         <label for = "project" class="projects">Project</label>
         <input id="project" name="project" type="text" disabled value="">
-        <button>Edit task</button>
-        <button>Remove task</button>
+        <button id="edit-task">Edit task</button>
+        <button id="remove-task">Remove task</button>
     </div>
     </div>
 </body>
